--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
+:root{
+    
+}
 * {
     margin:  0;
     padding: 0;
+    width: 100%;
 }
 
 .container {
@@ -10,6 +14,8 @@
 .mainContainer{
     display: column;
     flex-direction: row;
+    text-align: center;
+
     
 }
 
@@ -17,21 +23,46 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 5px;
+    text-align: center;
 }
 
 /* list style */
 
 .name{
-    font-weight: bold
+    border-radius: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    
+    justify-content: inherit;
+}
+.name:first-child{
+    margin-top: 0;
 }
 
 .date{
+    border-radius: 15px;
     font-style: italic;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    justify-content: inherit;
+}
+.date:first-child{
+    margin-top: 0;
 }
 
+
 .genre{
-    background-color: aqua;
+
+    border-radius: 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    justify-content: inherit;
 }
+.genre:first-child{
+    margin-top: 0;
+}
+
 
 
 
