venue results fixed and additional css changes added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,6 @@
-
-:root{
-    
-}
 * {
-    margin:  0;
-    padding: 0;
+    margin:   0;
+    padding:  0;
     width: 100%;
 }
 
@@ -13,55 +9,54 @@
 }
 
 .mainContainer{
-    display: column;
+    display:     column;
     flex-direction: row;
-    text-align: center;
-
-    
+    text-align:  center;
 }
 
 .subContainer{
-    display: flex;
-    flex-direction: row;
+    display:                  flex;
+    flex-direction:            row;
     justify-content: space-between;
-    margin: 5px;
-    text-align: center;
+    margin:                    5px;
+    text-align:             center;
+}
+.has-background-info{
+    border-radius: 5px;
 }
 
 /* list style */
 
 .name{
-    border-radius: 15px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    
+    font-weight:        bold;
+    margin-bottom:      10px;
     justify-content: inherit;
+    height:             45px;
 }
 .name:first-child{
-    margin-top: 0;
+    margin-top:            0;
 }
 
 .date{
-    border-radius: 15px;
-    font-style: italic;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    font-style:       italic;
+    margin-bottom:      10px;
+    margin-top:         10px;
     justify-content: inherit;
+    height:             45px;
 }
 .date:first-child{
-    margin-top: 0;
+    margin-top:            0;
 }
 
 
 .genre{
-
-    border-radius: 15px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom:      10px;
+    margin-top:         10px;
     justify-content: inherit;
+    height:             45px;
 }
 .genre:first-child{
-    margin-top: 0;
+    margin-top:            0;
 }
 
 
