--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,30 @@
     margin-top:            0;
 }
 
+@media screen and (max-width: 1165px){
+    .genre{
+        height: 75px;
+    }
+    .date{
+        height: 75px;
+    }
+    .name{
+        height: 75px;
+    }
+}
+
+@media screen and (max-width: 970px){
+    .genre{
+        height: 100px;
+    }
+    .date{
+        height: 100px;
+    }
+    .name{
+        height: 100px;
+    }
+}
+
 @media screen and (max-width: 575px){
     .genre{
         height: 100px;
